<resources>
    <string name="app_name">Eustace</string>

    <string name="mode">Operation mode</string>
    <string name="mode_off">Off</string>
    <string name="mode_background">Background</string>
    <string name="mode_foreground">Foreground</string>

    <string name="server_url_label">Alexhq server url</string>
    <string name="observable_id_label">Observable id</string>

    <string name="message_channel_name">Eustace</string>
    <string name="notification_title">Eustace</string>
    <string name="notification_text">Eustace position sender running</string>


</resources>
