<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />
    </com.google.android.material.appbar.AppBarLayout>

    <TextView
        android:id="@+id/mode_label"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mode"/>
    <RadioGroup
        android:id="@+id/mode_radio_group"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/off_radio_button"
            android:tag="off"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_off" />
        <RadioButton
            android:id="@+id/background_radio_button"
            android:tag="background"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_background"/>
        <RadioButton
            android:id="@+id/foreground_radio_button"
            android:tag="foreground"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mode_foreground" />
    </RadioGroup>

    <TextView
        android:id="@+id/server_url_label"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/server_url_label" />
    <EditText
        android:id="@+id/server_url_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:singleLine="true"/>

    <TextView
        android:id="@+id/observable_id_label"
        android:layout_marginTop="20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/observable_id_label"/>
    <EditText
        android:id="@+id/observable_id_box"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="left|center_vertical"
        android:singleLine="true"/>


</LinearLayout>